# Swap

./: .gitattributes  .gitmodules  CMakeLists.txt  LICENSE  Libraries.cmake  Resources.cmake  Source.cmake
Libraries/glad/: CMakeLists.txt
Libraries/glad/debug/include/glad/: gl.h  glad.h
Libraries/glad/debug/src/: gl.c  glad.c
Libraries/glad/release/include/glad/: gl.h  glad.h
Libraries/glad/release/src/: gl.c  glad.c
Resources/: Blur.frag  DeferredLighting.frag  DeferredLighting.vert  DepthOnly.frag  DepthOnly.vert  Forward.frag  Forward.vert  ForwardCommon.glsl  FramebufferCommon.glsl  GBuffer.vert  LightingCommon.glsl  MaterialCommon.glsl  MaterialDefines.glsl  Normals.frag  Normals.vert  SSAO.frag  Screen.vert  Tonemap.frag  ViewCommon.glsl
Resources/Shaders/: DeferredLighting.vert  DepthOnly.vert  Forward.frag  Forward.vert  GBuffer.frag  GBuffer.vert  GBufferCommon.glsl  LightingCommon.glsl  Normals.vert  SSAO.frag  SSAOBlur.frag  Threshold.frag  Tonemap.frag
Source/: Assert.h  Delegate.cpp  Delegate.h  Main.cpp
Source/Core/: Delegate.h  Hash.h  Log.h
Source/Graphics/: BufferObject.cpp  BufferObject.h  DrawingContext.h  ForEachUniformType.inl  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsDefines.h  GraphicsResource.cpp  GraphicsResource.h  Material.cpp  Material.h  MaterialParameter.cpp  MaterialParameter.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  RasterizerState.cpp  RasterizerState.h  ResourcePool.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureInfo.h  Uniform.cpp  Uniform.h  UniformBufferObject.cpp  UniformBufferObject.h  UniformBufferObjectHelpers.h  UniformTypes.h  Viewport.h
Source/Math/: Bounds.h  (+3 more)
(+65 files in other folders)
